# walk-with-me

./: LICENSE  README.md  pyproject.toml
src/wwme/: citysurfaces.py  epochs.py  labels.py  matrix.py  model.py  rloc.py  streetview.py  truth.py  wwme.py
src/wwme/networks/: ocr_utils.py
src/wwme/train/: args.py  train.py
src/wwme/util/: get_mat_data.py  get_stnet.py
