[project]
name = "wwme"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = [
    "urban-analytics",
    "pedestrian-network",
    "create-annotation",
    "sidewalk-detection"
]
authors = [
    { name = "Maryam Hosseini", email = "maryamh@mit.edu" },
]
maintainers = [
    { name = "Daniel Hodczak", email = "dhodcz2@uic.edu" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
dynamic = ["dependencies"]

[project.urls]
issue-tracker = "https://github.com/Mary-h86/walk-with-me/issues"
repository = "https://github.com/Mary-h86/walk-with-me"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 42",
    "wheel",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = ["requirements-dev.txt"] }

[tool.setuptools.packages.find]
where = ["src"]
include = ["wwme*"]

[tool.poetry.dependencies]
python = "^3.8"
magicpandas = { git = "https://github.com/dhodcz2/magicpandas.git" }
